@@ -144,7 +144,8 @@ void C_GlobalTest(const SEXP learnsample, const SEXP weights,
     inputs = GET_SLOT(learnsample, PL2_inputsSym);
     dweights = REAL(weights);
     
-    y = get_transformation(responses, 1);
+    /* y = get_transformation(responses, 1); */
+    y = get_jointtransf(responses);
     
     expcovinf = GET_SLOT(fitmem, PL2_expcovinfSym);
     C_ExpectCovarInfluence(REAL(y), ncol(y), REAL(weights), 
