@@ -60,9 +60,8 @@ SEXP R_Ensemble(SEXP learnsample, SEXP weights, SEXP fitmem, SEXP controls) {
      
          C_init_node(tree, nobs, get_ninputs(learnsample), 
                      get_maxsurrogate(get_splitctrl(controls)),
-                     ncol(GET_SLOT(GET_SLOT(learnsample, PL2_responsesSym), 
-                          PL2_jointtransfSym)));
-                          
+                     ncol(get_jointtransf(GET_SLOT(learnsample, 
+                                                   PL2_responsesSym))));
 
          /* generate altered weights for perturbation */
          if (replace) {
